--- a/ami/ami.html
+++ b/ami/ami.html
@@ -774,7 +774,7 @@
                                           
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize" id="updateDataButton">Simpan
+                                             <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize" id="updateDataButton">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
