--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -781,19 +781,13 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="footer-copyright">
-                        <p><span>© 2023</span><a href="#"></a>
+                        <p><span>© 2023</span><a href="#">DTI ULBI</a>
                         </p>
                      </div>
                   </div>
                   <div class="col-md-6">
                      <div class="footer-menu text-end">
                         <ul>
-                           <li>
-                              <a href="#">About</a>
-                           </li>
-                           <li>
-                              <a href="#">Team</a>
-                           </li>
                            <li>
                               <a href="#">Contact</a>
                            </li>
