--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -799,33 +799,28 @@
     </div>
     <footer class="footer-wrapper">
       <div class="footer-wrapper__inside">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="footer-copyright">
-                <p><span>© 2023</span><a href="#"></a></p>
-              </div>
+         <div class="container-fluid">
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="footer-copyright">
+                     <p><span>© 2023</span><a href="#">DTI ULBI</a>
+                     </p>
+                  </div>
+               </div>
+               <div class="col-md-6">
+                  <div class="footer-menu text-end">
+                     <ul>
+                        <li>
+                           <a href="#">Contact</a>
+                        </li>
+                     </ul>
+                  </div>
+                  <!-- ends: .Footer Menu -->
+               </div>
             </div>
-            <div class="col-md-6">
-              <div class="footer-menu text-end">
-                <ul>
-                  <li>
-                    <a href="#">About</a>
-                  </li>
-                  <li>
-                    <a href="#">Team</a>
-                  </li>
-                  <li>
-                    <a href="#">Contact</a>
-                  </li>
-                </ul>
-              </div>
-              <!-- ends: .Footer Menu -->
-            </div>
-          </div>
-        </div>
+         </div>
       </div>
-    </footer>
+   </footer>
   </main>
   <div id="overlayer">
     <div class="loader-overlay">
