Modul Simpelbi: Cek btn diisi atau belum diisi ami

--- a/pengawasan/proses_ami.html
+++ b/pengawasan/proses_ami.html
@@ -65,6 +65,18 @@
           cursor: pointer;
           font-size: 12px;
       }
+      .success-button {
+          background-color: #009e3d; /* Warna latar belakang */
+          color: #fff; /* Warna teks */
+          padding: 5px 15px; /* Ukuran padding */
+          border: none; /* Tanpa border */
+          border-radius: 15px; /* Sudut bulat */
+          cursor: pointer;
+          font-size: 12px;
+      }
+      .success-button:hover {
+          background-color: #663cff; /* Warna latar belakang saat hover */
+      }
 
       .custom-button:hover {
           background-color: #663cff; /* Warna latar belakang saat hover */
@@ -634,8 +646,8 @@
                <div class="col-lg-12 mb-30">
                   <div class="breadcrumb-main user-member justify-content-sm-between ">
                      <div class="action-btn">
-                        <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
-                           <i class="las la-plus fs-16"></i>users list datatable</a>
+                        <!-- <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
+                           <i class="las la-plus fs-16"></i>users list datatable</a> -->
                         <!-- Modal -->
                         <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
@@ -757,8 +769,8 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Table</h4>
-                                 <div class="adv-table-table__button">
+                                 <h4>Audit Mutu Internal (AMI)</h4>
+                                 <!-- <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           Export
@@ -770,7 +782,7 @@
                                           <a class="dropdown-item" href="#">print</a>
                                        </div>
                                     </div>
-                                 </div>
+                                 </div> -->
                               </div>
                               <div id="filter-form-container"></div>
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
