--- a/pengawasan/pengawasan-mekanisme.html
+++ b/pengawasan/pengawasan-mekanisme.html
@@ -65,6 +65,18 @@
           cursor: pointer;
           font-size: 12px;
       }
+      .success-button {
+          background-color: #009e3d; /* Warna latar belakang */
+          color: #fff; /* Warna teks */
+          padding: 5px 15px; /* Ukuran padding */
+          border: none; /* Tanpa border */
+          border-radius: 15px; /* Sudut bulat */
+          cursor: pointer;
+          font-size: 12px;
+      }
+      .success-button:hover {
+          background-color: #663cff; /* Warna latar belakang saat hover */
+      }
 
       .custom-button:hover {
           background-color: #663cff; /* Warna latar belakang saat hover */
