Modul Simpelbi: proses audit untuk kesimpulan

--- a/pengawasan/pengawasan-kesimpulan.html
+++ b/pengawasan/pengawasan-kesimpulan.html
@@ -659,7 +659,7 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Mekanisme Yang Dilaksanaan
+                                 <h4>Kesimpulan
                                  </h4>
                                  <div class="adv-table-table__button">
                                     <div class="dropdown">
@@ -679,16 +679,16 @@
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
+                                      
                                        <th>
-                                          <span class="userDatatable-title">No</span>
+                                          <span class="userDatatable-title">SISTEM DOKUMEN CUKUP LENGKAP UNTUK MENDUKUNG PELAKSANAAN SISTEM PENJAMINAN MUTU INTERNAL DAN PENGELOLAAN MUTU PROGRAM STUDI	</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Mekanisme</span>
+                                          <span class="userDatatable-title">JIKA LAINNYA	</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Jawaban</span>
+                                          <span class="userDatatable-title">TANGGAL INPUT </span>
                                        </th>
-                     
                                     </tr>
                                  </thead>
                                  <tbody id="content">
@@ -797,7 +797,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./mekanisme.js" type="module"></script>
+   <script src="./kesimpulan.js" type="module"></script>
    <!-- endinject-->
 </body>
 
