--- a/admins/profil-admins.html
+++ b/admins/profil-admins.html
@@ -434,72 +434,20 @@
                </ul>
             </div>
          </div>
-         
       </div>
       
-
       <div class="contents">
-
          <div class="demo2 mb-25 t-thead-bg">
             <div class="container-fluid">
                <div class="row ">
                   <div class="col-lg-12">
                      <div class="breadcrumb-main">
-                        <!-- Modal Update -->
-                        <div class="modal fade new-member-update " id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                           <div class="modal-dialog modal-dialog-centered">
-                              <div class="modal-content  radius-xl">
-                                 <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Update Profile</h6>
-                                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                       <img src="../img/svg/x.svg" alt="x" class="svg">
-                                    </button>
-                                 </div>
-                                 <div class="modal-body">
-                                    <div class="new-member-modal">
-                                       <form method="POST">
-                                          <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <Label>Nama :</Label>
-                                                <input type="text" class="form-control" id="nama">
-                                             </div>
-                                          </div>
-                                          <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <Label>Jabatan :</Label>
-                                                <input type="text" class="form-control" id="jabatan">
-                                             </div>
-                                          </div>
-                                          <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <Label>Email :</Label>
-                                                <input type="email" class="form-control" id="email">
-                                             </div>
-                                          </div>
-                                          <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <label for="foto">Foto :</label>
-                                                <input id="fotoInput" type="file" class="form-control-file" accept="image/*" />
-                                             </div>
-                                          </div>                                         
-                                          <div class="button-group d-flex pt-25">
-                                             <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize" id="updateDataButton">Simpan
-                                             </button>
-                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
-                                          </div>
-                                       </form>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <!-- Modal Update -->
                         <h4 class="text-capitalize breadcrumb-title">View Profile</h4>
                         <div class="breadcrumb-action justify-content-center flex-wrap">
                            <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                  <li class="breadcrumb-item"><a href="#"><i class="uil uil-estate"></i>Dashboard</a></li>
-                                 <li class="breadcrumb-item active" aria-current="page">Profile</li>
+                                 <li class="breadcrumb-item active" aria-current="page">View Profile</li>
                               </ol>
                            </nav>
                         </div>
