Modul Simpelbi : Create direct link to profile

--- a/ami/kts.html
+++ b/ami/kts.html
@@ -122,7 +122,7 @@
                            <div class="nav-author__options">
                               <ul>
                                  <li>
-                                    <a href="">
+                                    <a href="../admins/profil-admins.html">
                                        <i class="uil uil-user"></i> Profile</a>
                                  </li>
                               </ul>
