--- a/pengawasan/pengawasan-foto_prodi.html
+++ b/pengawasan/pengawasan-foto_prodi.html
@@ -681,13 +681,22 @@
                                     <tr class="userDatatable-header">
                                       
                                        <th>
-                                          <span class="userDatatable-title">SISTEM DOKUMEN CUKUP LENGKAP UNTUK MENDUKUNG PELAKSANAAN SISTEM PENJAMINAN MUTU INTERNAL DAN PENGELOLAAN MUTU PROGRAM STUDI	</span>
+                                          <span class="userDatatable-title">No	</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">JIKA LAINNYA	</span>
+                                          <span class="userDatatable-title">Fakultas	</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">TANGGAL INPUT </span>
+                                          <span class="userDatatable-title">Program Studi </span>
+                                       </th>
+                                       <th>
+                                          <span class="userDatatable-title">Foto </span>
+                                       </th>
+                                       <th>
+                                          <span class="userDatatable-title">Oleh Auditor </span>
+                                       </th>
+                                       <th>
+                                          <span class="userDatatable-title">Tanggal Upload </span>
                                        </th>
                                     </tr>
                                  </thead>
@@ -797,7 +806,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./kesimpulan.js" type="module"></script>
+   <script src="./foto_kegiatan_prodi.js" type="module"></script>
    <!-- endinject-->
 </body>
 
