feat(GetFotoKegiatan): Menampilkan foto kegiatan

--- a/pengawasan/foto_kegiatan.html
+++ b/pengawasan/foto_kegiatan.html
@@ -806,7 +806,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./foto_kegiatan_prodi.js" type="module"></script>
+   <script src="./foto_kegiatan.js" type="module"></script>
    <!-- endinject-->
 </body>
 
