feat (getrangkingprodi) menampilkan skor ranking

--- a/laporan/rangking_temuan.html
+++ b/laporan/rangking_temuan.html
@@ -81,7 +81,10 @@
       .custom-button:hover {
           background-color: #663cff; /* Warna latar belakang saat hover */
       }
-   
+      #barChart {
+      width: 20px; /* Atur lebar sesuai kebutuhan */
+      height: 50px; /* Atur tinggi sesuai kebutuhan */
+      }
   </style>
 </head>
 
