--- a/laporan/rangking_prodi.html
+++ b/laporan/rangking_prodi.html
@@ -802,7 +802,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./rangking_temuan.js" type="module"></script>
+   <script src="./rangking_prodi.js" type="module"></script>
    <!-- endinject-->
 </body>
 
