--- a/laporan/rekap_temuan.html
+++ b/laporan/rekap_temuan.html
@@ -846,7 +846,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
-   <script src="./rangking_temuan.js" type="module"></script>
+   <script src="./rekap_temuan.js" type="module"></script>
    <!-- endinject-->
 </body>
 
