--- a/pengawasan/pengawasan-audit.html
+++ b/pengawasan/pengawasan-audit.html
@@ -406,9 +406,9 @@
                   </div>
                </li>
                <!-- ends: .nav-flag-select -->
-               <li class="nav-author">
+               <li id="nav-author" class="nav-author">
                   <div class="dropdown-custom">
-                     <a href="javascript:;" class="nav-item-toggle"><img src="../img/author-nav.jpg" alt="" class="rounded-circle">
+                     <a href="javascript:;"  class="nav-item-toggle"><img id="navItemPhoto" src=""  alt="User Photo" class="rounded-circle">
                         <span class="nav-item__title">Danial<i class="las la-angle-down nav-item__arrow"></i></span>
                      </a>
                      <div class="dropdown-parent-wrapper">
@@ -418,8 +418,11 @@
                                  <img src="../img/author-nav.jpg" alt="" class="rounded-circle">
                               </div>
                               <div>
-                                 <h6>Rabbi Islam Rony</h6>
-                                 <span>UI Designer</span>
+                                 <h6 class="nav-item_nama">nama_user</h6>
+                                 <span class="nav-item_level">nama_level</span>
+                                 <br>
+                                 <span class="nav_email">email</span>
+
                               </div>
                            </div>
                            <div class="nav-author__options">
