feat(GetDataProfile) : hal dashboard, profile view

--- a/admins/profil-admins.html
+++ b/admins/profil-admins.html
@@ -238,11 +238,10 @@
          <!-- ends: navbar-left -->
          <div class="navbar-right">
             <ul class="navbar-right__menu">
-               <!-- ends: .nav-flag-select -->
-               <li class="nav-author">
+               <li id="nav-author" class="nav-author">
                   <div class="dropdown-custom">
-                     <a href="javascript:;" class="nav-item-toggle"><img src="../img/author-nav.jpg" alt="" class="rounded-circle">
-                        <span class="nav-item__title">Admin<i class="las la-angle-down nav-item__arrow"></i></span>
+                     <a href="javascript:;" class="nav-item-toggle"><img id="navItemPhoto" src=""  alt="User Photo" class="rounded-circle">
+                        <span class="nav-item__title">Danial<i class="las la-angle-down nav-item__arrow"></i></span>
                      </a>
                      <div class="dropdown-parent-wrapper">
                         <div class="dropdown-wrapper">
@@ -251,14 +250,16 @@
                                  <img src="../img/author-nav.jpg" alt="" class="rounded-circle">
                               </div>
                               <div>
-                                 <h6>Admin</h6>
-                                 <span>Admin</span>
+                                 <h6 class="nav-item_nama">nama_user</h6>
+                                 <span class="nav-item_level">nama_level</span>
+                                 <br>
+                                 <span class="nav_email">email</span>
                               </div>
                            </div>
                            <div class="nav-author__options">
                               <ul>
                                  <li>
-                                    <a href="profil-admins.html">
+                                    <a href="../admins/profil-admins.html">
                                        <i class="uil uil-user"></i> Profile</a>
                                  </li>
                               </ul>
