--- a/auditors/dashboard-auditor.html
+++ b/auditors/dashboard-auditor.html
@@ -1131,9 +1131,9 @@
                   </div>
                </li>
                <!-- ends: .nav-flag-select -->
-               <li class="nav-author">
+               <li id="nav-author" class="nav-author">
                   <div class="dropdown-custom">
-                     <a href="javascript:;" class="nav-item-toggle"><img src="../img/author-nav.jpg" alt="" class="rounded-circle">
+                     <a href="javascript:;"  class="nav-item-toggle"><img id="navItemPhoto" src=""  alt="User Photo" class="rounded-circle">
                         <span class="nav-item__title">Danial<i class="las la-angle-down nav-item__arrow"></i></span>
                      </a>
                      <div class="dropdown-parent-wrapper">
@@ -1143,8 +1143,11 @@
                                  <img src="../img/author-nav.jpg" alt="" class="rounded-circle">
                               </div>
                               <div>
-                                 <h6>Rabbi Islam Rony</h6>
-                                 <span>UI Designer</span>
+                                 <h6 class="nav-item_nama">nama_user</h6>
+                                 <span class="nav-item_level">nama_level</span>
+                                 <br>
+                                 <span class="nav_email">email</span>
+      
                               </div>
                            </div>
                            <div class="nav-author__options">
@@ -1158,14 +1161,7 @@
                                        <i class="uil uil-setting"></i>
                                        Settings</a>
                                  </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-key-skeleton"></i> Billing</a>
-                                 </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-users-alt"></i> Activity</a>
-                                 </li>
+                                
                                  <li>
                                     <a href="">
                                        <i class="uil uil-bell"></i> Help</a>
@@ -1989,6 +1985,8 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
+   <script src="auditor.js" type="module"></script>
+
    <!-- endinject-->
 </body>
 
