--- a/auditors/dashboard-auditor.html
+++ b/auditors/dashboard-auditor.html
@@ -1414,61 +1414,10 @@
                                              <th>Actions</th>
                                           </tr>
                                        </thead>
-                                       <tbody>
+                                       <tbody id="content">
+                                          
                                           <tr>
-                                             <td>
-                                                <div class="selling-product-img d-flex align-items-center">
-                                                   <img class="radius-xs img-fluid order-bg-opacity-primary" src="../img/premium-clock.png" alt="img">
-                                                   <span>Premium Clock</span>
-                                                </div>
-                                             </td>
-                                             <td>$280</td>
-                                             <td>339</td>
-                                             <td>$38,536</td>
-                                          </tr>
-                                          <tr>
-                                             <td>
-                                                <div class="selling-product-img d-flex align-items-center">
-                                                   <img class="radius-xs img-fluid order-bg-opacity-primary" src="../img/t-shirt.png" alt="img">
-                                                   <span>Boys T-Shirt</span>
-                                                </div>
-                                             </td>
-                                             <td>$25</td>
-                                             <td>80</td>
-                                             <td>$20,573</td>
-                                          </tr>
-                                          <tr>
-                                             <td>
-                                                <div class="selling-product-img d-flex align-items-center">
-                                                   <img class="radius-xs img-fluid order-bg-opacity-primary" src="../img/nike.png" alt="img">
-                                                   <span>Nike Shoes</span>
-                                                </div>
-                                             </td>
-                                             <td>$32</td>
-                                             <td>58</td>
-                                             <td>$17,457</td>
-                                          </tr>
-                                          <tr>
-                                             <td>
-                                                <div class="selling-product-img d-flex align-items-center">
-                                                   <img class="radius-xs img-fluid order-bg-opacity-primary" src="../img/cup-glass.png" alt="img">
-                                                   <span>Smart Glass</span>
-                                                </div>
-                                             </td>
-                                             <td>$9,50</td>
-                                             <td>36</td>
-                                             <td>$15,354</td>
-                                          </tr>
-                                          <tr>
-                                             <td>
-                                                <div class="selling-product-img d-flex align-items-center">
-                                                   <img class="radius-xs img-fluid order-bg-opacity-primary" src="../img/women-bag.png" alt="img">
-                                                   <span>Women Bag</span>
-                                                </div>
-                                             </td>
-                                             <td>$32</td>
-                                             <td>40</td>
-                                             <td>$12,354</td>
+                                             
                                           </tr>
                                        </tbody>
                                     </table>
