Fix(Prodi): Perbaikan tabel di dashboard prodi

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1887,11 +1887,9 @@
                         <table class="table table--default table-borderless">
                           <thead>
                             <tr>
-                              <th>Prodi/Fakultas</th>
-                              <th>Auditor</th>
-                              <th>Tanggal RTM</th>
-                              <th>Actions</th>
-                              <th>Status</th>
+                              <th>No</th>
+                              <th>Program Studi</th>
+                              <th>Foto</th>
                             </tr>
                           </thead>
                           <tbody></tbody>
