--- a/prodi/update-status.html
+++ b/prodi/update-status.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimPelBi</title>
 
+    <script src="../js/cihuy.js" type="module"></script>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap"
       rel="stylesheet"
