Fix(UpdateStatus): Perbaikan Get Status By ID AMI

--- a/prodi/update-status.html
+++ b/prodi/update-status.html
@@ -1184,9 +1184,9 @@
                             class="form-control ih-medium ip-light radius-xs b-light px-15"
                             id="inputName"
                           >
-                            <option value="">Pilih Status</option>
-                            <option value="option1">Proses</option>
-                            <option value="option2">Selesai</option>
+                            <option id="inputName"></option>
+                            <option value="Proses">Proses</option>
+                            <option value="Selesai">Selesai</option>
                             <!-- tambahkan opsi sesuai kebutuhan Anda -->
                           </select>
                         </div>
@@ -1303,6 +1303,7 @@
     <script src="../../assets/theme_assets/js/jvectormap-init.js"></script>
     <script src="../../assets/theme_assets/js/leaflet-init.js"></script>
     <script src="../../assets/theme_assets/js/main.js"></script>
+    <script src="./dashboard-prodi.js" type="module"></script>
     <!-- endinject-->
   </body>
 </html>
