Fix(Prodi): Perbaikan dropdown update status AMI

--- a/prodi/update-status.html
+++ b/prodi/update-status.html
@@ -1183,12 +1183,7 @@
                           <select
                             class="form-control ih-medium ip-light radius-xs b-light px-15"
                             id="inputName"
-                          >
-                            <option id="inputName"></option>
-                            <option value="Proses">Proses</option>
-                            <option value="Selesai">Selesai</option>
-                            <!-- tambahkan opsi sesuai kebutuhan Anda -->
-                          </select>
+                          ></select>
                         </div>
                       </div>
                       <br />
