Feat(Prodi): Get data untuk Dokumentasi AMI

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1402,50 +1402,6 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="tab-pane fade"
-                      id="t_selling-week"
-                      role="tabpanel"
-                      aria-labelledby="t_selling-week-tab"
-                    >
-                      <div class="selling-table-wrap">
-                        <div class="table-responsive">
-                          <table class="table table--default table-borderless">
-                            <thead>
-                              <tr>
-                                <th>PRDUCTS NAME</th>
-                                <th>Price</th>
-                                <th>Sold</th>
-                                <th>Revenue</th>
-                              </tr>
-                            </thead>
-                            <tbody></tbody>
-                          </table>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="tab-pane fade"
-                      id="t_selling-month"
-                      role="tabpanel"
-                      aria-labelledby="t_selling-month-tab"
-                    >
-                      <div class="selling-table-wrap">
-                        <div class="table-responsive">
-                          <table class="table table--default table-borderless">
-                            <thead>
-                              <tr>
-                                <th>PRDUCTS NAME</th>
-                                <th>Price</th>
-                                <th>Sold</th>
-                                <th>Revenue</th>
-                              </tr>
-                            </thead>
-                            <tbody></tbody>
-                          </table>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -1469,12 +1425,20 @@
                         <table class="table table--default table-borderless">
                           <thead>
                             <tr>
-                              <th>No</th>
-                              <th>Program Studi</th>
-                              <th>Foto</th>
+                              <th>
+                                <span class="userDatatable-title">No</span>
+                              </th>
+                              <th>
+                                <span class="userDatatable-title"
+                                  >Program Studi</span
+                                >
+                              </th>
+                              <th>
+                                <span class="userDatatable-title">Foto</span>
+                              </th>
                             </tr>
                           </thead>
-                          <tbody></tbody>
+                          <tbody id="dokumentasi"></tbody>
                         </table>
                       </div>
                     </div>
