Feat(Prodi): Get data kelengkapan AMI FilesProdi

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1496,7 +1496,7 @@
             <br />
             <div class="card border-0 px-25 browser-states">
               <div class="card-header px-0 border-0">
-                <h6>Data Kelengkapan AMI Siklus Ke-1</h6>
+                <h6>Data Kelengkapan AMI</h6>
               </div>
               <div class="card-body p-0">
                 <div class="tab-content">
@@ -1511,14 +1511,13 @@
                         <table class="table table--default table-borderless">
                           <thead>
                             <tr>
-                              <th>Prodi/Fakultas</th>
-                              <th>Auditor</th>
-                              <th>Tanggal RTM</th>
-                              <th>Actions</th>
-                              <th>Status</th>
+                              <th>No</th>
+                              <th>Judul File</th>
+                              <th>Download</th>
+                              <th>Tanggal Upload</th>
                             </tr>
                           </thead>
-                          <tbody></tbody>
+                          <tbody id="filesprodi"></tbody>
                         </table>
                       </div>
                     </div>
