--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -679,8 +679,9 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <button style="margin: right 20px; margin-bottom: 20px; margin-left: 20px ;" type="button" id="tambahButton" class="btn btn-default btn-squared color-primary btn-outline-primary ">
-                                 <a href="">Tambah Data</a>
+                              <button style="margin: right 20px; margin-bottom: 20px; margin-left: 20px ;" id="addbutton" type="button" class="btn btn-default btn-squared color-primary btn-outline-primary ">
+                                 
+                              Tambah Data
                               </button>
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
@@ -816,6 +817,8 @@
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
    <script src="./proses_audit.js" type="module"></script>
+   <script src="./href.js" type="module"></script>
+
    <!-- endinject-->
 </body>
 
