Fix(Dashboard): Perbaikan tabel di Dashboard Prodi

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1422,7 +1422,14 @@
                   >
                     <div class="selling-table-wrap">
                       <div class="table-responsive">
-                        <table class="table table--default table-borderless">
+                        <table
+                          class="table mb-0 table-borderless"
+                          data-sorting="true"
+                          data-filter-container="#filter-form-container"
+                          data-paging-current="1"
+                          data-paging-position="right"
+                          data-paging-size="10"
+                        >
                           <thead>
                             <tr>
                               <th>
